# libosinfo

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitpublish  AUTHORS.in  CONTRIBUTING.md  GNUmakefile  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  cfg.mk  configure.ac  libosinfo.spec.in  maint.mk  meson.build  meson_options.txt  mingw-libosinfo.spec.in  prepare-release.sh
build-aux/: GNUmakefile  bracket-spacing.pl  cfg.mk  dist.sh  download_pci_ids  download_usb_ids  maint.mk  syntax-check  syntax-check.mk
ci/: ci-debian-10.Dockerfile  ci-debian-9.Dockerfile  ci-debian-sid.Dockerfile  ci-fedora-rawhide-cross-mingw32.Dockerfile  ci-opensuse-151.Dockerfile  ci-ubuntu-1804.Dockerfile  gitlab.yml  manifest.yml  refresh
ci/buildenv/: almalinux-9.sh  alpine-319.sh  centos-stream-8.sh  centos-stream-9.sh  fedora-36.sh  fedora-40.sh  fedora-rawhide-cross-mingw32.sh  fedora-rawhide-cross-mingw64.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-leap-153.sh  opensuse-tumbleweed.sh  ubuntu-2004.sh  ubuntu-2204.sh
ci/containers/: almalinux-9.Dockerfile  alpine-318.Dockerfile  alpine-319.Dockerfile  alpine-edge.Dockerfile  centos-8.Dockerfile  centos-stream-8.Dockerfile  centos-stream-9.Dockerfile  ci-centos-7.Dockerfile  ci-centos-8.Dockerfile  ci-centos-stream.Dockerfile  ci-debian-10.Dockerfile  ci-debian-sid.Dockerfile  ci-fedora-31.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-33.Dockerfile  ci-fedora-rawhide-cross-mingw32.Dockerfile  ci-fedora-rawhide-cross-mingw64.Dockerfile  ci-fedora-rawhide.Dockerfile  ci-opensuse-151.Dockerfile  ci-ubuntu-1804.Dockerfile  ci-ubuntu-2004.Dockerfile  debian-10.Dockerfile  debian-11.Dockerfile  refresh  (+19 more)
data/device/pcisig.com/: Makefile.am
docs/reference/: Libosinfo-docs.xml  meson.build
examples/: demo.py
m4/: libosinfo-compile-warnings.m4
osinfo/: Makefile.am  check-symfile.pl  check-symsorting.pl  ignore-value.h  libosinfo-1.0.pc.in  libosinfo.syms  meson.build  osinfo.h  osinfo_avatar_format.c  osinfo_avatar_format.h  osinfo_datamap.c  osinfo_datamap.h  osinfo_datamaplist.c  osinfo_datamaplist.h  osinfo_db.c  osinfo_db.h  osinfo_deployment.c  osinfo_deployment.h  osinfo_deploymentlist.c  osinfo_deploymentlist.h  osinfo_device.c  osinfo_device.h  osinfo_device_driver.c  osinfo_device_driver.h  osinfo_device_driver_private.h  osinfo_device_driverlist.c  osinfo_device_driverlist.h  osinfo_devicelink.c  osinfo_devicelink.h  osinfo_devicelinkfilter.c  osinfo_devicelinkfilter.h  osinfo_devicelinklist.c  osinfo_devicelinklist.h  osinfo_devicelist.c  osinfo_devicelist.h  osinfo_entity.c  osinfo_entity.h  osinfo_filter.c  osinfo_filter.h  osinfo_firmware.c  (+59 more)
po/: LINGUAS  Makevars  POTFILES.in  af.po  am.po  anp.po  ar.po  as.po  ast.po  bal.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+62 more)
scripts/: require-dco.sh
test/: Makefile.am  test-db.c  test-device.c  test-entity.c  test-filter.c  test-install-script.c  test-isodetect.c  test-loader.c  test-mediauris.c  test-os.c  test-oslist.c  test-platform.c  test-platformlist.c  test-product.c  test-productfilter.c  test-treeuris.c
tests/: Makefile.am  check-symfile  check-symsorting  install-script.xsl  meson.build  test-db.c  test-device.c  test-devicelinklist.c  test-devicelist.c  test-entity.c  test-filter.c  test-firmware.c  test-firmwarelist.c  test-image.c  test-imagelist.c  test-imageuris.c  test-install-script.c  test-isodetect.c  test-list.c  test-loader.c  test-media.c  test-mediauris.c  test-os-resources.c  test-os.c  test-oslist.c  test-platform.c  test-platformlist.c  test-product.c  test-productfilter.c  test-tree.c  test-treeuris.c  test-uris-common.c  test-uris-common.h
tests/dbdata/datamap/example.com/: libosinfo-test-datamap.xml  libosinfo-test-datamap2.xml
tests/dbdata/device/libosinfo.org/: test-device-one.xml
tests/dbdata/install-script/example.com/: libosinfo-test-install-script.xml
tests/dbdata/os/fedoraproject.org/: fedora-16.xml
tests/dbdata/os/libosinfo.org/: test-db-firmware.xml  test-db-image.xml  test-db-media-dupe1.xml  test-db-media-dupe2.xml  test-db-media-dupe3.xml  test-db-media-dupe4.xml  test-db-media.xml  test-db-tree.xml  test-os-cloud-image-username-arg1.xml  test-os-cloud-image-username-arg2.xml  test-os-cloud-image-username-arg3.xml  test-os-devices-basic-1.xml  test-os-devices-basic-2-clone.xml  test-os-devices-basic-2.xml  test-os-devices-removed-1.xml  test-os-devices-removed-2-clone.xml  test-os-devices-removed-2.xml  test-os-devices-removed-3.xml  test-os-devices-removed-4-clone.xml  test-os-devices-removed-4.xml  test-os-drivers-priority.xml  test-os-firmwares-complete-1.xml  test-os-firmwares-complete-inherit1.xml  test-os-firmwares-complete-inherit2.xml  test-os-firmwares-complete-inherit3.xml  test-os-firmwares-inheritance-1.xml  test-os-firmwares-inheritance-2.xml  test-os-firmwares-inheritance-3.xml  test-os-firmwares-inheritance-4.xml  test-os-firmwares-inheritance-5.xml  test-os-firmwares-inheritance-6.xml  test-os-kernel-url-arg1.xml  test-os-kernel-url-arg2.xml  test-os-kernel-url-arg3.xml  test-os-media-installer-script.xml  test-os-media-no-installer.xml  test-os-media.xml  test-os-multipleshortids.xml  test-os-resources-basic.xml  test-os-resources-inheritance-1.xml  (+11 more)
tests/isodata/fedora/fedora29/: Fedora-Server-dvd-x86_64-29_Beta-1.5.iso.txt  Fedora-Server-netinst-x86_64-29_Beta-1.5.iso.txt  Fedora-Workstation-Live-x86_64-29_Beta-1.5.iso.txt  Fedora-Workstation-netinst-x86_64-29_Beta-1.5.iso.txt
tests/isodata/fedora/silverblue29/: Fedora-Silverblue-ostree-x86_64-29_Beta-1.5.iso.txt
tests/isodata/rhel/rhel7.5/: RHEL-7.5-20180322.0-Server-ppc64le-dvd1.iso.txt
tests/isodata/ubuntu/ubuntu18.10/: cosmic-desktop-amd64.iso.txt  cosmic-server-amd64.iso.txt  cosmic-server-arm64.iso.txt  cosmic-server-ppc64el.iso.txt  cosmic-server-s390x.iso.txt
tools/: Makefile.am  meson.build  osinfo-detect.c  osinfo-install-script.c  osinfo-query.c
(+12 files in other folders)
